# GrOptics

./: CMakeLists.txt  Doxyfile  Makefile  Makefile.common  Makefile_noDownloadRobast  NathanNewSCT.C  PsfSegSpot.root  PsfSegSpot15r15p.root  PsfSegSpot45.root  PsfSegSpotTrCurve.root  README.md  compilation.txt  diffFiles.py  gridfileStdDC1.txt  photonLocation.root  photonhistory_Tel1.root  v400BetaIssues
Config/: arrayConfig.cfg  devSegSCTelescopes.cfg  geoConfig.cfg  headerForVeritasConfigFile  opticsSimulation.pilot  photon.cph  stdSCTelescopes.cfg  stdSegSCTelescopes.cfg  veritas.cfg  veritas4Tel.cfg  veritas4TelTest.cfg  veritas5Tel.cfg  veritasR.cfg
ConfigFiles/: arrayConfig.cfg  opticsSimulation.pilot
ConfigFiles/Config/: devSegSCTelescopes.cfg  opticsSimulation.pilot  photon.cph
Make_Photons/: GDefinition.h  GUtilityFuncts.cpp  GUtilityFuncts.h  Makefile  Makefile.common  README  VG_Pilot.cpp  VG_Pilot.h  makePhotonsOffset.cpp  makePhotonsOffset.pilot  makePhotonsPtSrc.cpp  makePhotonsPtSrc.pilot
PSFSegSpotTests/: PsegNo.root  PsfSegSpot0.root  PsfSegSpot45p.root  PsfSegSpotTrCurve.root
README/: DocumentationGuide.txt  UsersGuideGrOptics.html  UsersGuideGrOptics.lyx  UsersGuideGrOptics.tex  configFiles.txt  coordinateSystems.txt  grOpticsSequence.txt  latex2html.sh  outputRootFile.txt  toDoList.txt  versionHistoryInstall.txt
README/UsersGuideGrOptics.html.LyXconv/: UsersGuideGrOptics.css  UsersGuideGrOptics.html
README/html/: S-DATAF.html  S-GRAPH.html  S-INPUT.html  S-INTRO.html  S-OVERV.html  SS-ARRAY.html  SS-INDATA.html  SS-INSTALL.html  SS-ODATA.html  SS-QSTART.html  SS-STEER.html  SSS-STEL.html  SSS-STEL1.html  SSS-TEDIT.html  index.html  sect0001.html  sect0002.html
README/html/.cache/: DVIPNG.images
ROBAST-telescope_factory/: Makefile
ROBAST-telescope_factory/include/: ATelescope.h  ATelescopeFactory.h  LinkDef.h
ROBAST-telescope_factory/src/: ATelescope.cxx  ATelescopeFactory.cxx
ROBASTEditedFile/: AOpticalComponent.cxx
Test/: README  comparePhotonLocationTrees.C  photonLocationOrig.root  photonhistory_Tel1Orig.root  photonhistory_Tel2Orig.root  photonhistory_Tel3Orig.root  photonhistory_Tel4Orig.root
Test/CompareWithGrisudet/: README  arrayConfig.cfg  detector.pilot  makePhotonsOffset.pilot  opticsSimulation.pilot  veritasCompareGrOptics.cfg  veritasCompareGrOptics_nonzeroFacetParms.cfg  veritasCompareGrOptics_zeroedFacetParms.cfg  veritasGrISUforGrOpticsCompare_oneTel.cfg  veritasGrISUforGrOpticsCompare_oneTel_mirrorParmsZero.cfg
Test/Config/: headerForVeritasConfigFile  opticsSimulation.pilot  stdSCTelescopes.cfg  stdSegSCTelescopes.cfg  veritas.cfg
include/: ADefinition.h  GArrayTel.h  GDCGeometry.h  GDCRayTracer.h  GDCTelescope.h  GDCTelescopeFactory.h  GDefinition.h  GGeometryBase.h  GOrderedGrid.h  GPilot.h  GRayTracerBase.h  GReadDCStdBase.h  GReadDCStdGrISU.h  GReadPhotonBase.h  GReadPhotonGrISU.h  GReadSCStd.h  GReadSegSCStd.h  GRootDCNavigator.h  GRootDCNavigatorLinkDef.h  GRootWriter.h  GRootWriterLinkDef.h  GSCTelescope.h  GSCTelescopeFactory.h  GSegSCTelescope.h  GSegSCTelescopeFactory.h  GSegmentedMirror.h  GSegmentedObscuration.h  GSimulateOptics.h  GTelescope.h  GTelescopeFactory.h  GUtilityFuncts.h  LinkDef.h  README.md  mainpage.h
scripts/: SC1.C  SC_CombiTrans.C  addError.C  createXYplot.C  getPolyCoeffsFocalPlane.C  getSCSag.C  makeBackupTarFile.sh  mapmtLocations.txt  plotCamera.C  plotImage.C  plotTestTel.C  plotTestTel_1.C  printAll.sh  testSpotNoVol_withVol.txt
scripts/DrawingSCTracks/: GSCTelescope.cpp  README  grOptics.cpp
scripts/GnuplotFit/.svn/: entries
scripts/GnuplotFit/.svn/text-base/: VVV-OSdefinitions_v2.pdf.svn-base  fit.log.svn-base  gnuplot_mirror.txt.svn-base
scripts/SegSC/: NewSCT.C
scripts/VersionControl/: changeVersion.sh  compareVersions.C
src/: ADefinition.cpp  GArrayTel.cpp  GArray_Tel_noGraphs_4.0deg.cpp  GDCGeometry.cpp  GDCRayTracer.cpp  GDCTelescope.cpp  GDCTelescopeFactory.cpp  GDefinition.cpp  GGeometryBase.cpp  GOrderedGrid.cpp  GPilot.cpp  GRayTracerBase.cpp  GReadDCStdBase.cpp  GReadDCStdGrISU.cpp  GReadPhotonBase.cpp  GReadPhotonGrISU.cpp  GReadSCStd.cpp  GReadSegSCStd.cpp  GRootDCNavigator.cpp  GRootDCNavigatorDict.cpp  GRootWriter.cpp  GRootWriterDict.cpp  GSCTelescope.cpp  GSCTelescopeFactory.cpp  GSegSCTelescope.cpp  GSegSCTelescopeFactory.cpp  GSegmentedMirror.cpp  GSegmentedObscuration.cpp  GSimulateOptics.cpp  GTelescope.cpp  GTelescopeFactory.cpp  GUtilityFuncts.cpp  addVersion.scr  grOptics.cpp  grReaderFactory.cpp  testUtilities.cpp  testValgrind.cpp  version.txt
