cmake_minimum_required(VERSION 3.8)
project(GrOptics)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Config/arrayConfig.cfg
        Config/devSegSCTelescopes.cfg
        Config/geoConfig.cfg
        Config/headerForVeritasConfigFile
        Config/opticsSimulation.pilot
        Config/photon.cph
        Config/stdSCTelescopes.cfg
        Config/stdSegSCTelescopes.cfg
        Config/veritas.cfg
        include/GArrayTel.h
        include/GDCGeometry.h
        include/GDCRayTracer.h
        include/GDCTelescope.h
        include/GDCTelescopeFactory.h
        include/GDefinition.h
        include/GGeometryBase.h
        include/GOrderedGrid.h
        include/GPilot.h
        include/GRayTracerBase.h
        include/GReadDCStdBase.h
        include/GReadDCStdGrISU.h
        include/GReadPhotonBase.h
        include/GReadPhotonGrISU.h
        include/GReadSCStd.h
        include/GReadSegSCStd.h
        include/GRootDCNavigator.h
        include/GRootWriter.h
        include/GrOpticsDict.h
        include/GSCTelescope.h
        include/GSCTelescopeFactory.h
        include/GSegmentedMirror.h
        include/GSegmentedObscuration.h
        include/GSegSCTelescope.h
        include/GSegSCTelescopeFactory.h
        include/GSimulateOptics.h
        include/GUtilityFuncts.h
        include/LinkDef.h
        include/README.md
        Make_Photons/GDefinition.h
        Make_Photons/GUtilityFuncts.cpp
        Make_Photons/GUtilityFuncts.h
        Make_Photons/Makefile
        Make_Photons/Makefile.common
        Make_Photons/makePhotonsOffset.cpp
        Make_Photons/makePhotonsPtSrc.cpp
        Make_Photons/VG_Pilot.cpp
        Make_Photons/VG_Pilot.h
        ROBAST-telescope_factory/include/bernlohr/fileopen.h
        ROBAST-telescope_factory/include/bernlohr/initial.h
        ROBAST-telescope_factory/include/bernlohr/io_basic.h
        ROBAST-telescope_factory/include/bernlohr/mc_tel.h
        ROBAST-telescope_factory/include/bernlohr/straux.h
        ROBAST-telescope_factory/include/bernlohr/warning.h
        ROBAST-telescope_factory/include/ABorderSurfaceCondition.h
        ROBAST-telescope_factory/include/ACauchyFormula.h
        ROBAST-telescope_factory/include/ACorsikaIACTEventHeader.h
        ROBAST-telescope_factory/include/ACorsikaIACTFile.h
        ROBAST-telescope_factory/include/ACorsikaIACTRunHeader.h
        ROBAST-telescope_factory/include/AFocalSurface.h
        ROBAST-telescope_factory/include/AGeoAsphericDisk.h
        ROBAST-telescope_factory/include/AGeoBezierPcon.h
        ROBAST-telescope_factory/include/AGeoBezierPgon.h
        ROBAST-telescope_factory/include/AGeoUtil.h
        ROBAST-telescope_factory/include/AGeoWinstonCone2D.h
        ROBAST-telescope_factory/include/AGeoWinstonConePoly.h
        ROBAST-telescope_factory/include/AGlassCatalog.h
        ROBAST-telescope_factory/include/ALens.h
        ROBAST-telescope_factory/include/AMirror.h
        ROBAST-telescope_factory/include/AObscuration.h
        ROBAST-telescope_factory/include/AOpticalComponent.h
        ROBAST-telescope_factory/include/AOpticsManager.h
        ROBAST-telescope_factory/include/ARay.h
        ROBAST-telescope_factory/include/ARayArray.h
        ROBAST-telescope_factory/include/ARayShooter.h
        ROBAST-telescope_factory/include/ARefractiveIndex.h
        ROBAST-telescope_factory/include/ASchottFormula.h
        ROBAST-telescope_factory/include/ASellmeierFormula.h
        ROBAST-telescope_factory/include/ATelescope.h
        ROBAST-telescope_factory/include/ATelescopeFactory.h
        ROBAST-telescope_factory/include/LinkDef.h
        ROBAST-telescope_factory/src/bernlohr/eventio.c
        ROBAST-telescope_factory/src/bernlohr/fileopen.c
        ROBAST-telescope_factory/src/bernlohr/io_simtel.c
        ROBAST-telescope_factory/src/bernlohr/straux.c
        ROBAST-telescope_factory/src/bernlohr/warning.c
        ROBAST-telescope_factory/src/ABorderSurfaceCondition.cxx
        ROBAST-telescope_factory/src/ACauchyFormula.cxx
        ROBAST-telescope_factory/src/ACorsikaIACTEventHeader.cxx
        ROBAST-telescope_factory/src/ACorsikaIACTFile.cxx
        ROBAST-telescope_factory/src/ACorsikaIACTRunHeader.cxx
        ROBAST-telescope_factory/src/AFocalSurface.cxx
        ROBAST-telescope_factory/src/AGeoAsphericDisk.cxx
        ROBAST-telescope_factory/src/AGeoBezierPcon.cxx
        ROBAST-telescope_factory/src/AGeoBezierPgon.cxx
        ROBAST-telescope_factory/src/AGeoUtil.cxx
        ROBAST-telescope_factory/src/AGeoWinstonCone2D.cxx
        ROBAST-telescope_factory/src/AGeoWinstonConePoly.cxx
        ROBAST-telescope_factory/src/AGlassCatalog.cxx
        ROBAST-telescope_factory/src/ALens.cxx
        ROBAST-telescope_factory/src/AMirror.cxx
        ROBAST-telescope_factory/src/AObscuration.cxx
        ROBAST-telescope_factory/src/AOpticalComponent.cxx
        ROBAST-telescope_factory/src/AOpticsManager.cxx
        ROBAST-telescope_factory/src/ARay.cxx
        ROBAST-telescope_factory/src/ARayArray.cxx
        ROBAST-telescope_factory/src/ARayShooter.cxx
        ROBAST-telescope_factory/src/ARefractiveIndex.cxx
        ROBAST-telescope_factory/src/ASchottFormula.cxx
        ROBAST-telescope_factory/src/ASellmeierFormula.cxx
        ROBAST-telescope_factory/src/ATelescope.cxx
        ROBAST-telescope_factory/src/ATelescopeFactory.cxx
        ROBAST-telescope_factory/src/ROBASTDict.cxx
        ROBAST-telescope_factory/src/ROBASTDict.h
        ROBAST-telescope_factory/tutorials/AbsLengthTest.C
        ROBAST-telescope_factory/tutorials/AshraOptics.C
        ROBAST-telescope_factory/tutorials/CORSIKA.C
        ROBAST-telescope_factory/tutorials/DaviesCotton.C
        ROBAST-telescope_factory/tutorials/EdmundOptics.C
        ROBAST-telescope_factory/tutorials/HESS1.C
        ROBAST-telescope_factory/tutorials/HexOkumuraCone.C
        ROBAST-telescope_factory/tutorials/HexWinstonCone.C
        ROBAST-telescope_factory/tutorials/multithread.C
        ROBAST-telescope_factory/tutorials/Optimize.C
        ROBAST-telescope_factory/tutorials/SchmidtCassegrain.C
        ROBAST-telescope_factory/tutorials/SchwarzschildCouder.C
        ROBAST-telescope_factory/tutorials/SimpleParabolicTelescope.C
        ROBASTEditedFile/AOpticalComponent.cxx
        scripts/DrawingSCTracks/grOptics.cpp
        scripts/DrawingSCTracks/GSCTelescope.cpp
        scripts/SegSC/NewSCT.C
        scripts/VersionControl/compareVersions.C
        scripts/addError.C
        scripts/createXYplot.C
        scripts/getPolyCoeffsFocalPlane.C
        scripts/getSCSag.C
        scripts/plotCamera.C
        scripts/plotImage.C
        scripts/plotTestTel.C
        scripts/plotTestTel_1.C
        scripts/SC1.C
        scripts/SC_CombiTrans.C
        src/GArray_Tel_noGraphs_4.0deg.cpp
        src/GArrayTel.cpp
        src/GDCGeometry.cpp
        src/GDCRayTracer.cpp
        src/GDCTelescope.cpp
        src/GDCTelescopeFactory.cpp
        src/GDefinition.cpp
        src/GGeometryBase.cpp
        src/GOrderedGrid.cpp
        src/GPilot.cpp
        src/GRayTracerBase.cpp
        src/GReadDCStdBase.cpp
        src/GReadDCStdGrISU.cpp
        src/GReadPhotonBase.cpp
        src/GReadPhotonGrISU.cpp
        src/GReadSCStd.cpp
        src/GReadSegSCStd.cpp
        src/GRootDCNavigator.cpp
        src/GRootWriter.cpp
        src/grOptics.cpp
        src/GrOpticsDict.cpp
        src/GrOpticsDict.h
        src/grReaderFactory.cpp
        src/GSCTelescope.cpp
        src/GSCTelescopeFactory.cpp
        src/GSegmentedMirror.cpp
        src/GSegmentedObscuration.cpp
        src/GSegSCTelescope.cpp
        src/GSegSCTelescopeFactory.cpp
        src/GSimulateOptics.cpp
        src/GUtilityFuncts.cpp
        src/testUtilities.cpp
        src/testValgrind.cpp
        Test/comparePhotonLocationTrees.C
        NathanNewSCT.C)

add_executable(GrOptics ${SOURCE_FILES})